@@ -633,7 +633,8 @@ class LinguaToolsView(BrowserView):
             res = list()
             if not context.hasTranslation(lang):
                 if not translationExists:
-                    context.addTranslation(lang)
+                    # need to make lang a string. It is currently unicode so checkid will freak out and lead to an infinite recursion
+                    context.addTranslation(str(lang))
                     newOb = True
                     if 'title' not in attrs:
                         attrs.append('title')
